<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView android:id="@+id/upper_chest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="47sp"
        android:layout_centerHorizontal="true"
        android:text="@string/upper_chest"
        android:paddingBottom="16dp" />

    <TextView android:id="@+id/ex1"
        android:layout_below="@id/upper_chest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:text="@string/ex1"
        android:paddingBottom="2dp" />

    <TextView android:id="@+id/ex1_recmd"
        android:layout_below="@id/ex1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ex1_recmd" />

    <ImageView android:id="@+id/barbell_incline_med1"
        android:layout_below="@id/ex1_recmd"
        android:contentDescription="@string/img_bar_inc_med1"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@mipmap/inc_bench1" />

    <ImageView android:id="@+id/barbell_incline_med2"
        android:layout_below="@id/ex1_recmd"
        android:layout_toEndOf="@id/barbell_incline_med1"
        android:contentDescription="@string/img_bar_inc_med2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@mipmap/inc_bench2" />

    <LinearLayout android:id="@+id/reps_and_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/barbell_incline_med2" >

        <TextView android:id="@+id/reps"
            android:paddingStart="21dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reps" />

        <EditText android:id="@+id/ex1_reps"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:hint="@integer/ex1_reps" />

        <TextView android:id="@+id/wght"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wght" />

        <EditText android:id="@+id/ex1_wght"
            android:hint="@integer/ex1_wght"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout android:id="@+id/sets_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/reps_and_weight" >

        <TextView android:id="@+id/sets"
            android:paddingStart="21dp"
            android:paddingEnd="21dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sets" />

        <EditText android:id="@+id/ex1_sets"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:hint="@integer/ex1_sets" />

    </LinearLayout>

    <LinearLayout android:id="@+id/ex1_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:layout_below="@id/sets_layout" >

        <TextView android:id="@+id/data_ex1"
            android:paddingTop="12dp"
            android:paddingStart="21dp"
            android:paddingEnd="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/data_text" />

        <TextView android:id="@+id/ex1_reps_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@integer/ex1_reps_data" />

        <TextView android:id="@+id/reps_literally"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reps_literally" />

        <TextView android:id="@+id/ex1_sets_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@integer/ex1_sets_data" />

        <TextView android:id="@+id/sets_literally"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sets_literally" />

        <TextView android:id="@+id/ex1_wght_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@integer/ex1_wght_data" />

        <TextView android:id="@+id/wght_literally"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wght_literally" />

    </LinearLayout>

    <Button android:id="@+id/ex1_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ex1_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />

</RelativeLayout>
