<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_day1__ex2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="djl.gymbuddy.Day1_Ex2">

    <TextView android:id="@+id/upper_chest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="47sp"
        android:layout_centerHorizontal="true"
        android:text="@string/upper_chest"
        android:paddingBottom="16dp" />

    <TextView android:id="@+id/ex2"
        android:layout_below="@id/upper_chest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:text="@string/ex2"
        android:paddingBottom="2dp" />

    <TextView android:id="@+id/ex2_recmd"
        android:layout_below="@id/ex2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ex2_recmd" />

    <ImageView android:id="@+id/inc_dumb1"
        android:layout_below="@id/ex2_recmd"
        android:contentDescription="@string/img_bar_inc_med1"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@mipmap/inc_dumb1" />

    <ImageView android:id="@+id/inc_dumb2"
        android:layout_below="@id/ex2_recmd"
        android:layout_toEndOf="@id/inc_dumb1"
        android:contentDescription="@string/img_bar_inc_med2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@mipmap/inc_dumb2" />

    <LinearLayout android:id="@+id/reps_and_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/inc_dumb1" >

        <TextView android:id="@+id/reps"
            android:paddingStart="21dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reps" />

        <EditText android:id="@+id/ex2_reps"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:hint="@integer/ex2_reps" />

        <TextView android:id="@+id/wght"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wght" />

        <EditText android:id="@+id/ex2_wght"
            android:hint="@integer/ex2_wght"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout android:id="@+id/sets_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/reps_and_weight" >

        <TextView android:id="@+id/sets"
            android:paddingStart="21dp"
            android:paddingEnd="21dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sets" />

        <EditText android:id="@+id/ex2_sets"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:hint="@integer/ex2_sets" />

    </LinearLayout>

    <LinearLayout android:id="@+id/ex2_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:layout_below="@id/sets_layout" >

        <TextView android:id="@+id/data_ex2"
            android:paddingTop="12dp"
            android:paddingStart="21dp"
            android:paddingEnd="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/data_text" />

        <TextView android:id="@+id/ex2_reps_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@integer/ex2_reps_data" />

        <TextView android:id="@+id/reps_literally"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reps_literally" />

        <TextView android:id="@+id/ex2_sets_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@integer/ex2_sets_data" />

        <TextView android:id="@+id/sets_literally"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sets_literally" />

        <TextView android:id="@+id/ex2_wght_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@integer/ex2_wght_data" />

        <TextView android:id="@+id/wght_literally"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wght_literally" />

    </LinearLayout>

    <Button android:id="@+id/ex2_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ex2_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send" />

</RelativeLayout>
